Fix dubbele scrollbar in modal

--- a/app/frontend/assets/styles/components/_modal.scss
+++ b/app/frontend/assets/styles/components/_modal.scss
@@ -32,6 +32,8 @@ dialog {
 
     &:has(.wrapper-sticky-footer) {
         height: 100%;
+        overflow-y: hidden;
+        box-sizing: border-box;
 
         .modal-body {
             display: flex;
